--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,50 +1,50 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"
-      xmlns:th="http://www.w3.org/1999/xhtml">
+<!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"-->
+<!--      xmlns:th="http://www.w3.org/1999/xhtml">-->
 
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<style> 
- 
-body { background-color:#F8F8FF; }
- 
- </style>
-<div class="container" >
-    <div class="row justify-content-center align-items-center" style="height:60vh; padding-top:130px">
-        <div class="col-12"><img src="img/logo.png" style="width:30%; padding-bottom:10px; margin: 0px auto 0px auto; display:block">
+<!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>-->
+<!--<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
+<!--<style> -->
+<!-- -->
+<!--body { background-color:#F8F8FF; }-->
+<!-- -->
+<!-- </style>-->
+<!--<div class="container" >-->
+<!--    <div class="row justify-content-center align-items-center" style="height:60vh; padding-top:130px">-->
+<!--        <div class="col-12"><img src="img/logo.png" style="width:30%; padding-bottom:10px; margin: 0px auto 0px auto; display:block">-->
 
-        </div>
+<!--        </div>-->
 
-        <div class="col-4">
-            <div class="card" >
-                <div class="card-body" >
-                    <form th:action="@{/login}" method="post">
-                        <div class="form-group" >
-                            Login <input type="text" class="form-control" name="username"
-                                         placeholder="Digite o seu usuário " autofocus>
-                        </div>
-                        <div class="form-group">
-                            Senha <input type="password" class="form-control" name="password"
-                                         placeholder="Digite a senha">
-                        </div>
-                        <div><input type="submit" class="btn btn-primary btn-lg btn-block" value="Entrar"/></div>
-                    </form>
-                    <div class="login-help">
-                        <a href="#"></a> <a href="#">
-                    </a>
+<!--        <div class="col-4">-->
+<!--            <div class="card" >-->
+<!--                <div class="card-body" >-->
+<!--                    <form th:action="@{/login}" method="post">-->
+<!--                        <div class="form-group" >-->
+<!--                            Login <input type="text" class="form-control" name="username"-->
+<!--                                         placeholder="Digite o seu usuário " autofocus>-->
+<!--                        </div>-->
+<!--                        <div class="form-group">-->
+<!--                            Senha <input type="password" class="form-control" name="password"-->
+<!--                                         placeholder="Digite a senha">-->
+<!--                        </div>-->
+<!--                        <div><input type="submit" class="btn btn-primary btn-lg btn-block" value="Entrar"/></div>-->
+<!--                    </form>-->
+<!--                    <div class="login-help">-->
+<!--                        <a href="#"></a> <a href="#">-->
+<!--                    </a>-->
 
-                        <div class="container"
-                             th:unless="${#httpServletRequest.getParameter('error') == null}">
-                            <div class="alert alert-danger">
-                                <span th:text="${#httpServletRequest.getParameter('error')}"></span>
-                                Login e/ou senha incorreto(s), entre contato com seu gerente.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
+<!--                        <div class="container"-->
+<!--                             th:unless="${#httpServletRequest.getParameter('error') == null}">-->
+<!--                            <div class="alert alert-danger">-->
+<!--                                <span th:text="${#httpServletRequest.getParameter('error')}"></span>-->
+<!--                                Login e/ou senha incorreto(s), entre contato com seu gerente.-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--</div>-->
 
 
